--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
 #Makefile for canny
+
 #编译器为g++
 CC = g++
 #目标名
@@ -10,7 +11,7 @@ INCLUDE = -I../include
 CFLAGS = -g -o  
 
 #动态库的引用
-LIBVAR = -lMvCameraControl -lX11
+LIBVAR = -lMvCameraControl -lX11 -lMVGigEVisionSDK
 
 LIBPATH = -L../lib
 LPATHRUN = -Wl,-rpath=../lib
@@ -28,5 +29,12 @@ $(TARGET):$(SRCFILE)
 	$(CC) $(CFLAGS) $(TARGET) $(SRCFILE) $(INCLUDE) $(LPATHRUN) $(LIBPATH) $(LIBVAR) $(PKG) 
 #%.o : %.c
 ##	$(CC) $(CFLAGS) $< $@ 
+.PHONY:clean
+
 clean:
 	-$(RM) $(TARGET) $(DEFFILE)
+	-$(RM) MvSdkLog
+
+.PHONY:add-library
+add-library:
+	sudo cp ../lib/* /usr/local/lib
