--- a/src/Makefile
+++ b/src/Makefile
@@ -13,8 +13,7 @@ CFLAGS = -g -o
 #CPPFLAGS = -E -D
 
 #动态库的引用
-LIBVAR = -lMvCameraControl -lX11 -lMVGigEVisionSDK
-
+LIBVAR = -lMvCameraControl 
 LIBPATH = -L../lib
 LPATHRUN = -Wl,-rpath=../lib
 #定义变量pkg表示opencv的包
@@ -26,14 +25,15 @@ RM = rm -rf
 
 SRCFILE = $(wildcard *.cpp)
 DEFFILE = $(patsubst %.cpp, %.o, $(SRCFILE))
+$(warning "All the cpp file is $(SRCFILE)")
 #--------------------------命令操作----------------------------------------------
 #$^ 代表所有依赖文件
 #$@ 代表目标文件
-#$< 代表第一个文件
+#$< 代表依赖第一个文件
 $(TARGET):$(DEFFILE)
 	$(CC) $(CFLAGS) $(TARGET) $(DEFFILE) $(INCLUDE) $(LPATHRUN) $(LIBPATH) $(LIBVAR) $(PKG) 
 %.o:%.cpp
-	$(CC) -c $< -o $@ $(INCLUDE)
+	$(CC) -c $< -o $@ $(INCLUDE) $(LPATHRUN) $(PKG)
 #---------------------------伪指令---------------------------------------------
 #clean操作，删除生成的文件和文件夹
 #如运行过需执行sudo操作
