能量机关添加

--- a/main/Makefile
+++ b/main/Makefile
@@ -10,13 +10,19 @@ SOURCE_CAMERA_DIR=$(CAMERA_DIR)/src
 
 ARMORFINDER_DIR=../codes/ArmorFinder
 SOURCE_ARMORFINDER_DIR=$(ARMORFINDER_DIR)/src
+
+ENERGY_DIR=../codes/Enegry
+SOURCE_ENERGY_DIR=$(ENERGY_DIR)/src
+
+PREPOCESS_DIR=../codes/Preprocess
+SOURCE_PREPOCESS_DIR=$(PREPOCESS_DIR)/src
 #头文件
-INC := ./ ../codes/ArmorFinder/include ../codes/Camera/include
+INC := ./ ../codes/ArmorFinder/include ../codes/Camera/include ../codes/Preprocess/include ../codes/Enegry/include
 
 #动态库或静态库文件的相对路径
 LIBSPATH := ../codes/Camera/lib
 
-VPATH=../codes/Camera/src:../codes/ArmorFinder/src
+VPATH=$(SOURCE_CAMERA_DIR):$(SOURCE_ARMORFINDER_DIR):$(SOURCE_ENERGY_DIR):$(SOURCE_PREPOCESS_DIR)
 #定义变量pkg表示opencv的包
 PKG = `pkg-config opencv --libs --cflags`
 
@@ -30,7 +36,7 @@ CC = g++
 CFLAGS = -g -o 
 #编译时所依赖的通用c++源程序
 #源程序文件
-SOURCE :=$(wildcard $(SOURCE_CAMERA_DIR)/*.cpp $(SOURCE_ARMORFINDER_DIR)/*.cpp)
+SOURCE :=$(wildcard $(SOURCE_CAMERA_DIR)/*.cpp $(SOURCE_ARMORFINDER_DIR)/*.cpp $(SOURCE_ENERGY_DIR)/*.cpp $(SOURCE_PREPOCESS_DIR)/*.cpp main.cpp) 
 SOURCE_WITHOUT_DIR :=$(notdir $(SOURCE))
 OBJS :=$(patsubst %.cpp,%.o,$(SOURCE_WITHOUT_DIR))
 
@@ -42,7 +48,7 @@ all:$(TARGET)
 
 
 $(TARGET):$(OBJS)
-	$(CC) $(CFLAGS) $@ $^ main.cpp $(addprefix -L,$(LIBSPATH)) $(addprefix -l,$(LIBS)) $(PKG) $(addprefix -I,$(INC))
+	$(CC) $(CFLAGS) $@ $^ $(addprefix -L,$(LIBSPATH)) $(addprefix -l,$(LIBS)) $(PKG) $(addprefix -I,$(INC))
 
 %.o:%.cpp
 	$(CC) -c $^ $(CFLAGS) $@  $(addprefix -I,$(INC)) $(PKG)
