孙霖增加thread库

--- a/main/Makefile
+++ b/main/Makefile
@@ -50,10 +50,10 @@ all:$(TARGET)
 
 
 $(TARGET):$(OBJS)
-	$(CC) $(CFLAGS) $@ $^ $(addprefix -L,$(LIBSPATH)) $(addprefix -l,$(LIBS)) $(PKG) $(addprefix -I,$(INC)) -std=c++11
+	$(CC) $(CFLAGS) $@ $^ $(addprefix -L,$(LIBSPATH)) $(addprefix -l,$(LIBS)) $(PKG) $(addprefix -I,$(INC)) -std=c++11 -pthread
 
 %.o:%.cpp
-	$(CC) -c $^ $(CFLAGS) $@  $(addprefix -I,$(INC)) $(PKG) -std=c++11
+	$(CC) -c $^ $(CFLAGS) $@  $(addprefix -I,$(INC)) $(PKG) -std=c++11 -pthread
 
 #---------------------------伪指令---------------------------------------------
 #clean操作，删除生成的文件和文件夹
